--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
       <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
-      <meta name="description" content="Portfolio for Bradley Padayao.  HTML Email dev. Web dev." />
+      <meta
+         name="description"
+         content="Portfolio showcasing my skills in HTML email and Front-end web developement."
+      />
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
       <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <title>Bradley Padayao | Portfolio</title>
+      <title>BP | Portfolio</title>
 
       <link
          rel="stylesheet"
